@@ -258,7 +258,8 @@ $Id$
       CLEARDNSCACHE -- Forget the client-side cached IPs for all hostnames.
       NEWNYM    -- Switch to clean circuits, so new application requests
                    don't share any circuits with old ones.  Also clears
-                   the client-side DNS cache.
+                   the client-side DNS cache.  (Tor MAY rate-limit its
+                   response to this signal.)
 
   The server responds with "250 OK" if the signal is recognized (or simply
   closes the socket if it was asked to close immediately), or "552
